# CalculatorAPIsdk

./: README.md
calculatorapi-PYTHON_GENERIC_LIB (1)/: README.md  pyproject.toml  requirements.txt
calculatorapi-PYTHON_GENERIC_LIB (1)/calculatorapi/: api_helper.py  calculatorapi_client.py  configuration.py
calculatorapi-PYTHON_GENERIC_LIB (1)/calculatorapi/controllers/: base_controller.py  simple_calculator_controller.py
calculatorapi-PYTHON_GENERIC_LIB (1)/calculatorapi/exceptions/: api_exception.py
calculatorapi-PYTHON_GENERIC_LIB (1)/calculatorapi/http/: http_response.py
calculatorapi-PYTHON_GENERIC_LIB (1)/calculatorapi/models/: operation_type_enum.py
calculatorapi-PYTHON_GENERIC_LIB (1)/calculatorapi/utilities/: file_wrapper.py
calculatorapi-PYTHON_GENERIC_LIB (1)/doc/: client.md
calculatorapi-PYTHON_GENERIC_LIB (1)/doc/controllers/: simplecalculator.md
calculatorapi-PYTHON_GENERIC_LIB (1)/doc/models/: operation-type-enum.md
