[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "calculatorapi"
version = "1.0.0"
dependencies = ["apimatic-core~=0.2.0, >= 0.2.20", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
requires-python = ">=3.7"
[[project.authors]]
name = "APIMatic Code Generator"
email = "support@apimatic.io"

[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
